<resources>
    <string name="app_name">Affiliate Buddy - Link Generator</string>
    <string name="app_title">Affiliate Buddy</string>
    <string name="txt_appSlogan">Affiliate link Generator</string>
    <string name="txt_logoTitle">Affiliate Buddy</string>
    <string name="txt_hintInputUrl">Enter Product URL</string>
    <string name="txt_labelTag">Select Tag:</string>
    <string name="txt_longLink">Long link</string>
    <string name="txt_shortLink">Short link</string>
    <string name="txt_generate_link">Generate</string>
    <string-array name="array_aff_ids">
        <item>digicular-21</item>
        <item>anotheraffid-21</item>
    </string-array>
    <string name="txt_hintOutputUrl">Generated Affiliate URL</string>
    <string name="txt_copy">Copy</string>
    <string name="developer_credits">App by Susheel Karam</string>
    <!--<a href="https://www.linkedin.com/in/susheelkaram/"></a>-->

    <!-- Empty View in Link history -->
    <string name="no_links">You haven\'t created any links yet!</string>

    <!--Drawable Menu strings-->
    <string name="home">Home</string>
    <string name="links_history">Your Links</string>
    <string name="howto">How to Use?</string>
    <string name="settings">Settings</string>
    <string name="about_dev">About Us</string>

    <!--Settings Activity-->
    <string name="txt_HeadingLinkShortening">Link Shortening</string>
    <string name="txt_globalShortening">Automatically Shorten All links</string>

    <!--Bitly Account-->
    <string name="txt_bitlyTokenField">Your Bit.ly Account</string>
    <string name="txt_bitlyLink">Link your Bit.ly account</string>
    <string name="txt_bitlyRemove">Remove account</string>
    <string name="txt_accountAlreadyLinked">Account already linked!</string>
    <string name="txt_successAccountLinked">Account Successfully linked.</string>
    <string name="txt_confirmBitlyRemoveTitle">Remove Bitly account?</string>
    <string name="txt_confirmBitlyRemove">If you Remove your Bitly account, you cannot Shorten links anymore.\nDo you want to Delete anyway?</string>
    <string name="txt_successAccountRemoved">Account Removed Successfully!</string>

    <string name="txt_HeadingAffiliateIDSetup">Setup Affiliate ID/TAGs</string>
    <string name="txt_HeadingNewAffId">Add New ID</string>
    <string name="txt_HeadingExistingIds">Existing Affiliate IDs</string>
    <string name="txt_HintNewAffId">Enter New ID....</string>
    <string-array name="sa_settingsAffid">
        <item>Amazon</item>
        <item>Flipkart</item>
        <item>GearBest</item>
        <item>Banggood</item>
    </string-array>
    <!--Delete Dialog Settings-->
    <string name="txt_deleteDialogPositive">Yes</string>
    <string name="txt_deleteDialogNegative">Cancel</string>
    <string name="txt_deleteDialogTitle">Delete</string>
    <string name="txt_deleteDialogMessage">Are you sure you want to delete the Affiliate ID?</string>

    <!--About Page-->
    <string name="txt_aboutApp">Affo is an Easiest way to generate and manage your affiliate links for multiple affiliate networks all at one place. We currently support Amazon, Flipkart, Banggood and Gearbest.\n <b>Developer - Susheel Karam\nWebsite - susheelkaram.com</b></string>
    <string name="txt_aboutAppShort">The All-in-One tool to Generate, Shorten and Manage your Affiliate links.</string>
    <string name="txt_ShareApp">Hey, try this Unique and All-in-One Affiate Link generator/ manager for all your Affiliate programs.</string>

    <!--Toasts/ Log Messages/ Misc. Text-->
    <string name="txt_shareIntent">Share your Generated link using: </string>
    <string name="txt_EmptyGeneratedUrl">Please Generate the link first.</string>
    <string name="txt_EmptyAffId">Please add your Affiliate ID(s) in Settings</string>
    <string name="txt_InvalidUrl">Please enter a Valid link address</string>
    <string name="txt_LabelClipboardCopy">Affiliate link generated by Affo App</string>
    <string name="txt_SuccessClipboardCopy">Link copied to Clipboard.</string>
</resources>
