<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_HeadingNewAffId"
        style="@style/Style_HeadingSettings"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp">
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@color/colorLightGrey"-->
            <!--android:paddingTop="0dp"-->
            <!--android:padding="0dp">-->
            <!--<android.support.design.widget.TextInputEditText-->
        <EditText
            android:id="@+id/editText_AffIdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/txt_HintNewAffId"
            android:textColorHint="@color/colorLightGrey"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="24sp"
            android:layout_margin="0dp"
            android:background="@null"/>
        <!--</android.support.design.widget.TextInputLayout>-->
        <android.support.design.button.MaterialButton
            android:id="@+id/button_addAffId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:minWidth="10dp"
            android:padding="0dp"
            android:paddingRight="0dp"
            app:icon="@drawable/ic_add_black_32dp"
            android:background="@color/colorLightGrey"/>

    </LinearLayout>
    <!--<ListView-->
    <!--android:id="@+id/listView_affIds"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="10dp"-->
    <!--tools:layout_editor_absoluteX="8dp"-->
    <!--tools:layout_editor_absoluteY="8dp"-->
    <!--android:padding="10dp"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_HeadingExistingIds"
        style="@style/Style_HeadingSettings"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_ExistingIds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/layout_animation_fall_down"/>
</LinearLayout>