<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_HeadinLinkShorten"
            style="@style/Style_HeadingSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_HeadingLinkShortening" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:gravity="center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <Switch
                        android:id="@+id/switch_AutoShorten"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_globalShortening"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView_FreeLinkPointsStatic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="Free Short Link Points left"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/btn_GetMorePointsSettings"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:text="Add" />

                    <TextView
                        android:id="@+id/textView_FreeLinkPoints"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="0"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView_BitlyLinkStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/txt_bitlyTokenField"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/btn_LinkBitlyAccount"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:text="Link" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/btn_RemoveBitlyAccount"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="Remove"
                        android:visibility="gone" />
                </TableRow>
            </TableLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_HeadingAffid"
            style="@style/Style_HeadingSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_HeadingAffiliateIDSetup" />

        <ListView
            android:id="@+id/LV_SettingsAffIDListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>
    <!--</ScrollView>-->
</LinearLayout>