<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/TextView_AppMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_badge"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_horizontal"
                        android:text="Site"
                        android:textSize="10sp"
                        android:textAllCaps="true"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView_productTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:textStyle="bold"/>

                    <android.support.design.widget.TextInputLayout
                        style="@style/InputUrlTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/colorBlack">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtInput_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:drawableStart="@drawable/ic_link_black_24dp"
                            android:drawablePadding="5dp"
                            android:ems="10"
                            android:hint="@string/txt_hintInputUrl"
                            android:inputType="textUri" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/affId_selector"
                        android:background="@drawable/rectangle_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="190dp"
                        android:autofillHints="Select Affiliate ID"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"/>

                    <CheckBox
                        android:id="@+id/checkBox_Shorten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/affId_selector"
                        android:scaleX="1.2"
                        android:scaleY="1.2"
                        android:text="Short Link" />


                </RelativeLayout>

                <android.support.design.button.MaterialButton
                    android:id="@+id/button_generate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:elevation="5dp"
                    android:shadowColor="@color/colorBlack"
                    android:text="@string/txt_generate_link"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:onClick="generateClick"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <EditText
                        android:id="@+id/txtInput_generatedUrl"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textfield_rectangle"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:inputType="textMultiLine"
                        android:textColor="@color/colorDarkGrey"
                        android:layout_gravity="center_vertical"
                        android:padding="10dp"
                        android:paddingBottom="20dp"
                        android:hint="@string/txt_hintOutputUrl"
                        android:lines="3"
                        android:maxLines="4"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="0dp"
                        android:paddingLeft="5dp">

                        <android.support.design.button.MaterialButton
                            android:id="@+id/button_copyToClipboard"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginBottom="-5dp"
                            android:layout_marginTop="-6dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="4dp"
                            android:paddingTop="18dp"
                            android:paddingBottom="18dp"
                            android:minWidth="10dp"
                            app:icon="@drawable/ic_content_copy_black_24dp"
                            app:strokeColor="@color/colorPrimaryDark"
                            app:strokeWidth="2dp"/>

                        <android.support.design.button.MaterialButton
                            android:id="@+id/button_share"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginBottom="-6dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="4dp"
                            android:paddingTop="18dp"
                            android:paddingBottom="18dp"
                            android:minWidth="10dp"
                            app:icon="@drawable/ic_share_black_24dp"
                            app:strokeColor="@color/colorPrimaryDark"
                            app:strokeWidth="2dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ad_bannerAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-4360913501115508/6224863621">
            </com.google.android.gms.ads.AdView>
        </RelativeLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/myNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_view"
        app:itemIconTint="@color/colorBlack"
        app:headerLayout="@layout/drawer_header"
        android:fitsSystemWindows="true"/>
</android.support.v4.widget.DrawerLayout>